--- a/style.css
+++ b/style.css
@@ -3,20 +3,58 @@
     padding: 0;
 }
 
+div .icons > img {
+    height: 20px;
+}
+
+.dash_image {
+    height: 35px;
+}
+
 .container {
     display: grid;
     height: 100vh;
     width: 100vw;
-    grid-template-columns: 0.7fr 4fr;
-    grid-template-rows: 0.7fr 4fr;
+    grid-template-columns: 0.8fr 4fr;
+    grid-template-rows: 0.5fr 3fr;
 }
 
 /* sidebar navigation */
 .sidebar {
     background-color: green;
     display: grid;
-    grid-column: 1;
     grid-row: 1 / 3;
+    grid-template-rows: repeat(9, 1fr);
+}
+
+.title {
+    display: flex;
+    align-items: center;
+    gap: 0.7rem;
+    margin-left: 0.4rem;
+}
+
+.icons {
+    display: flex;
+    align-items: center;
+    margin-left: 0.7rem;
+    gap: 1.2rem;
+}
+
+.dashboard {
+    margin-top: 1rem;
+}
+
+.nav_icons_one {
+    margin-bottom: 1.5rem;
+    display: grid;
+    gap: 1.2rem;
+}
+
+.nav_icons_two {
+    margin-top: 2.5rem;
+    display: grid;
+    gap: 1.2rem;
 }
 
 /* header */
