--- a/style.css
+++ b/style.css
@@ -11,11 +11,15 @@ div .icons > img {
     height: 35px;
 }
 
+.header_icons {
+    height: 30px;
+}
+
 .container {
     display: grid;
     height: 100vh;
     width: 100vw;
-    grid-template-columns: 0.8fr 4fr;
+    grid-template-columns: 0.5fr 4fr;
     grid-template-rows: 0.5fr 3fr;
 }
 
@@ -60,6 +64,46 @@ div .icons > img {
 /* header */
 .header {
     background-color: blue;
+    display: grid;
+    grid-template-rows: auto;
+}
+
+.top_section_header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.search {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    margin-left: 3%;
+}
+
+.notification {
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+    margin-right: 3%;
+}
+
+.bottom_section_header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.avatar_greeting {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-left: 3%;
+}
+
+.header_buttons {
+    display: flex;
+    align-items: center;
+    gap: 3rem;
+    margin-right: 3%;
 }
 
 /* main-content */
