--- a/style.css
+++ b/style.css
@@ -114,14 +114,14 @@ div .icons > img {
 .project_content {
     background-color: red;
     display: grid;
-    grid-template-columns: 3fr 0.7fr;
-    grid-template-rows: 2fr 1fr;
+    grid-template-columns: 0.7fr 1fr 0.5fr;
+    grid-template-rows: 0.2fr 3fr 0.4fr ;
 }
 
 .left_projects {
     display: grid;
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
 }
 
 .project_cards {
@@ -131,4 +131,40 @@ div .icons > img {
 
 .cards {
     border: 2px solid black;
+    height: 210px;
+    width: 95%;
+    position: relative;
+}
+
+.row_one, .row_two {
+    display: grid;
+    gap: 2rem;
+    place-content: center;
+    margin-left: 4%;
+    margin-bottom: 4rem;
+}
+
+.project_title {
+    margin-top: 6%;
+    margin-left: 4%;
+    display: grid;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+}
+
+.project_texts {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 1.5rem;
+}
+
+.project_icons {
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin-bottom: 4%;
+    margin-right: 5%;
+    gap: 2.5rem;
 }
