--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 
-div .icons > img {
+div .icons>img {
     height: 20px;
 }
 
@@ -17,6 +17,10 @@ div .icons > img {
 
 .card_icons {
     height: 20px;
+}
+
+.avatar_icons {
+    height: 25px;
 }
 
 .container {
@@ -40,6 +44,7 @@ div .icons > img {
     align-items: center;
     gap: 0.7rem;
     margin-left: 0.4rem;
+    padding: 1rem;
 }
 
 .icons {
@@ -57,12 +62,14 @@ div .icons > img {
     margin-bottom: 1.5rem;
     display: grid;
     gap: 1.2rem;
+    padding: 1rem;
 }
 
 .nav_icons_two {
-    margin-top: 2.5rem;
+    margin-top: 1rem;
     display: grid;
     gap: 1.2rem;
+    padding: 1rem;
 }
 
 /* header */
@@ -110,12 +117,12 @@ div .icons > img {
     margin-right: 3%;
 }
 
-/* main-content */
+/* main-content left-side of project*/
 .project_content {
     background-color: red;
     display: grid;
-    grid-template-columns: 0.7fr 1fr 0.5fr;
-    grid-template-rows: 0.2fr 3fr 0.4fr ;
+    grid-template-columns: 1fr 1fr 0.5fr;
+    grid-template-rows: 0.2fr 4fr 0.4fr;
 }
 
 .left_projects {
@@ -136,7 +143,8 @@ div .icons > img {
     position: relative;
 }
 
-.row_one, .row_two {
+.row_one,
+.row_two {
     display: grid;
     gap: 2rem;
     place-content: center;
@@ -167,4 +175,31 @@ div .icons > img {
     margin-bottom: 4%;
     margin-right: 5%;
     gap: 2.5rem;
+}
+
+/* main-content right-side of project */
+.right_projects {
+    display: grid;
+    grid-row: 1 / 3;
+    grid-template-rows: 0.2fr 2fr 2fr;
+}
+
+.announcement_title {
+    margin-top: 7%;
+}
+
+.announcement_text {
+    display: grid;
+    border: 1pc solid yellow;
+    height: 300px;
+    width: 280px;
+    margin-top: 11%;
+    justify-content: center;
+    padding: 1rem;
+}
+
+.trending_avatar {
+    display: flex;
+    flex-direction: flex-start;
+    align-items: center;
 }
