work in progress on design of html page

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ div .icons > img {
 }
 
 .avatar_icons {
-    height: 50px;
+    height: 45px;
 }
 
 
@@ -40,10 +40,11 @@ div .icons > img {
 
 /* sidebar navigation */
 .sidebar {
-    background-color: green;
     display: grid;
     grid-row: 1 / 3;
     grid-template-rows: repeat(9, 1fr);
+    background-color: #38B9FF;
+    color: white;
 }
 
 .title {
@@ -81,9 +82,9 @@ div .icons > img {
 
 /* header */
 .header {
-    background-color: blue;
     display: grid;
     grid-template-rows: auto;
+    background-color: whitesmoke;
 }
 
 .top_section_header {
@@ -101,13 +102,19 @@ div .icons > img {
 .notification {
     display: flex;
     align-items: center;
-    gap: 1.5rem;
-    margin-right: 3%;
+    gap: 2rem;
+    margin-right: 7%;
+}
+
+.header_buttons {
+    display: grid;
+    grid-column: 3;
+    justify-content: space-between;
 }
 
 .bottom_section_header {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 .avatar_greeting {
@@ -120,16 +127,19 @@ div .icons > img {
 .header_buttons {
     display: flex;
     align-items: center;
-    gap: 3rem;
-    margin-right: 3%;
+    justify-content: space-evenly;
+}
+
+button {
+    background-color: blue;
 }
 
 /* main-content left-side of project*/
 .project_content {
-    background-color: red;
     display: grid;
     grid-template-columns: 1fr 1fr 0.5fr;
     grid-template-rows: 0.2fr 4fr 0.4fr;
+    background-color: #F2F2F2;
 }
 
 .left_projects {
@@ -214,5 +224,5 @@ div .icons > img {
     align-items: center;
     justify-content: center;
     grid-template-columns:  1fr 4fr;
-    gap: 1rem;
+    gap: 0.3rem;
 }
